# market-ops

./: .dockerignore  .editorconfig  .env.example  .gitguardian.yaml  .gitignore  .golangci.yml  .mcp.json  AGENTS.md  CLAUDE.md  DEPLOYMENT.md  README.md  Taskfile.contracts.yml  Taskfile.go.yml  Taskfile.py.yml  Taskfile.ts.yml  Taskfile.yml  biome.json  lefthook.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  tsconfig.base.json
contracts/: gateway.openapi.yaml  llm_gateway_envelope.json  python-client.config.yaml
deploy/: compose.dev.yml  compose.test.cache.yml  compose.test.yml  migrate.Dockerfile
design/: DK Command Center.dc.html  FLOWS.md  README.md  (+3 more)
services/llm/: Dockerfile  README.md  pyproject.toml
services/llm/fixtures/evals/: README.md  authoring.py  s24_authoring.py
services/llm/fixtures/evals/adversarial/: approval.jsonl  authoring.py
services/llm/fixtures/evals/adversarial_effective_scope/: effective_scope.jsonl
services/llm/fixtures/evals/boundary/: boundary.jsonl
services/llm/fixtures/evals/context/: context_ambiguous.jsonl  context_resolved.jsonl
services/llm/fixtures/evals/currency/: currency_ambiguity.jsonl
services/llm/fixtures/evals/data_quality/: data_quality.jsonl
services/llm/fixtures/evals/factual_provider/: cases.jsonl
services/llm/fixtures/evals/injection/: injection.jsonl
services/llm/fixtures/evals/intents/: intents_en.jsonl  intents_fa.jsonl  intents_mixed.jsonl
services/llm/fixtures/evals/listing/: listing_diagnostic.jsonl
services/llm/fixtures/evals/pricing/: pricing_events.jsonl
services/llm/src/llm/: __init__.py  app.py  asgi.py  config.py  localization.py  metrics.py  observability.py
services/llm/src/llm/contextres/: README.md  __init__.py  models.py  resolver.py
services/llm/src/llm/envelope/: README.md  __init__.py  composer.py  contract.py  grounding.py  models.py
services/llm/src/llm/evals/: README.md  __init__.py  __main__.py  cost.py  datasets.py  factual.py  harness.py  hostile.py  injection.py  report.py  scenario.py  scoring.py
services/llm/src/llm/flows/: README.md  __init__.py  actions.py  blockers.py  briefing.py  deep_links.py  dispatch.py  gateway_draft.py  investigation.py  models.py  monitoring.py  ports.py  simulation.py
services/llm/src/llm/intents/: README.md  __init__.py  capabilities.py  classifier.py  keyword_mock.py  models.py  normalize.py
services/llm/src/llm/orchestrator/: README.md  __init__.py  agent.py  cancellation.py  graph.py
services/llm/src/llm/providers/: README.md  __init__.py  base.py  mock.py  openai_compatible.py  transient.py
services/llm/src/llm/tools/: README.md  __init__.py  binding.py  registry.py
services/llm/tests/: test_adversarial_approval.py  test_chat_auth.py  test_config_timeout_ordering.py  test_context_resolver.py  test_context_resolver_normalization.py  test_eval_cost.py  test_eval_factual.py  test_eval_fixtures.py  test_eval_fixtures_s24.py  test_eval_harness.py  test_eval_injection.py  test_eval_malicious_provider.py  test_eval_scoring.py  test_failure_deep_link_allowlist.py  test_flows_actions.py  test_flows_blockers.py  test_flows_briefing.py  test_flows_investigation.py  test_flows_monitoring.py  test_flows_simulation.py  test_gateway_draft.py  test_gateway_draft_bounds.py  test_gateway_envelope_manifest.py  test_generated_client_cookie_auth.py  test_grounding.py  test_grounding_number_words.py  test_injection_grounding_contract.py  test_intent_classifier.py  test_intent_effective_scope.py  test_intent_routing.py  test_intent_tool_capabilities.py  test_killswitch.py  test_locale_composition.py  test_loop_bounds.py  test_metrics.py  test_money_no_float.py  test_normalize.py  test_observability.py  test_provider_neutrality.py  test_provider_transient.py  (+11 more)
(+949 files in other folders)
