[project]
name = "market-ops"
version = "0.0.0"
description = "DK Marketplace Intelligence — uv workspace root (LLM plane lives in services/llm)."
requires-python = ">=3.12"
# The workspace root depends on every Python member so `uv sync` installs them
# editable into the single shared root .venv (dk-p0-monorepo.md §2).
dependencies = ["market-ops-llm", "gen-python"]

[tool.uv]
package = false

[tool.uv.workspace]
# Explicit member list, no globs (dk-p0-monorepo.md §2). gen/python is the
# generated gateway client (openapi-python-client), committed and never edited.
members = ["services/llm", "gen/python"]

[tool.uv.sources]
market-ops-llm = { workspace = true }
gen-python = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
    "respx>=0.21",
    "httpx>=0.27",
]

[tool.ruff]
target-version = "py312"
line-length = 100
# gen/python is generated and carries its OWN pyproject [tool.ruff]; it is
# excluded from directory-mode runs here and from the lefthook pre-commit hook
# via that hook's `exclude` (generated code is excluded from ALL linters,
# monorepo §4). mypy excludes it separately below.
extend-exclude = ["gen/python"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
python_version = "3.12"
mypy_path = "services/llm/src"
explicit_package_bases = true
exclude = ["gen/python"]

[[tool.mypy.overrides]]
module = ["gen.python.*"]
follow_imports = "skip"
