[project]
name = "llm"
version = "0.0.0"
description = "DK Marketplace Intelligence — Python FastAPI LLM plane (read/Draft-only, no DB)."
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm"]
