[project]
name = "market-ops-llm"
version = "0.0.0"
description = "DK Marketplace Intelligence — Python FastAPI LLM plane (read/Draft-only, no DB)."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139,<1.0",
    "uvicorn>=0.51,<1.0",
    "sse-starlette>=3.4,<4.0",
    "pydantic>=2.9,<3.0",
    "pydantic-settings>=2.14,<3.0",
    "httpx>=0.27",
    "langgraph>=1.2,<2.0",
    "langchain>=1.3,<2.0",
    "langchain-core>=1.4,<2.0",
    "langchain-openai>=1.3,<2.0",
    "sentry-sdk>=2.66,<3.0",
    "gen-python",
]

[tool.uv.sources]
gen-python = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm"]
